adding mobile compatibilty and making corrections in desktop view

--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
 
 		<div class="sq s-red-black">
 		
-			<div class="row" style="right: 30px;">
+			<div class="row" >
 				<div>
-				<p>
-				<img src="khulamaidan.jpg" style="width:390px;height:190px;float:right;"/>
-				<h1 style="font-style: normal;font-family: Georgia, 'Times New Roman', Times, serif; margin-top:100px ;font-size:50px;right: 40px;">KHULA MAIDAN</h1>
-				<p style="font-family:Georgia, 'Times New Roman', Times, serif;margin-top:50px;color: rgb(204, 197, 197);font-size:25;margin-top: 170;">Khula Maidaan is an event based on technical and creative skills. The participants will have to design products based on the topics given and come up with plans to commercialize their products in the real world market. They may or may not use technical tools in doing so.</p>
-				</p>
+					<p>
+						<img class="event-image event-image1" src="khulamaidan.jpg"  />
+						<br>
+						<h1 class="event-title"
+							>
+							KHULA MAIDAN</h1>
+						<p class="about-event about-event1"
+							>
+							Khula Maidaan is an event based on technical and creative skills. The participants will
+							have to design products based on the topics given and come up with plans to
+							commercialize their products in the real world market. They may or may not use technical
+							tools in doing so.</p>
+					</p>
 				</div>
 			</div>
 			
@@ -36,14 +44,20 @@
 
 		<div class="gap"></div>
 
-		<div class="title s-blue dots">
+		<div class="title s-blue ">
 			<div class="row">
-			<div>
-				<p>
-				<img src="inquest.jpg" style="width:390px;height:190px;float:right;"/>
-				<h1 style="font-style: normal;font-family: Georgia, 'Times New Roman', Times, serif; margin-top:90px ;font-size:40px;right: 40px;color: #000;">INQUEST</h1>
-				<p style="font-family:Georgia, 'Times New Roman', Times, serif;margin-top:50px;color: rgb(204, 197, 197);font-size:25;margin-top: 170;">Inquest is one of the most exciting and brainstorming event of Aarohan.The online quiz  revolves around a series of twisted questions and puzzles.With a high participation number  Inquest stands as the most exciting and fun virtual event of Aarohan..</p>
-				</p>
+				<div>
+					<p>
+						<img class="event-image event-image2" src="inquest.jpg"  />
+						<h1 class="event-title"
+							>
+							INQUEST</h1>
+						<p class="about-event about-event2"
+							>
+							Inquest is one of the most exciting and brainstorming event of Aarohan.The online quiz
+							revolves around a series of twisted questions and puzzles.With a high participation
+							number Inquest stands as the most exciting and fun virtual event of Aarohan..</p>
+					</p>
 				</div>
 				</div>
 		</div>
@@ -53,26 +67,40 @@
 			<div class="row" style="right: 30px;">
 				<div>
 					<p>
-					<img src="bob.jpg" style="width:390px;height:190px;float:right;"/>
-					<h1 style="font-style: normal;font-family: Georgia, 'Times New Roman', Times, serif; margin-top:100px ;font-size:50px;right: 40px;color: #000;">TRIVIO</h1>
-					<p style="font-family:Georgia, 'Times New Roman', Times, serif;margin-top:50px;color: rgb(204, 197, 197);font-size:25;margin-top: 170;">Trivio is a new age game. The trivio is a fun and challenging online quiz where the participants are restricted to a  given amount of time for solving questions. Each question has four options and one  correct answer, on giving the correct answer within the limited time a more challenging  question comes up. Wrong answer or no answer leads to elimination of the participant.</p>
+						<img class="event-image event-image3" src="bob.jpg" />
+						<h1 class="event-title"
+							>
+							TRIVIO</h1>
+						<p class="about-event about-event3"
+							>
+							Trivio is a new age game. The trivio is a fun and challenging online quiz where the
+							participants are restricted to a given amount of time for solving questions. Each
+							question has four options and one correct answer, on giving the correct answer within
+							the limited time a more challenging question comes up. Wrong answer or no answer leads
+							to elimination of the participant.</p>
 					</p>
-					</div>
+				</div>
 					</div>
 		</div>
 
 		<div class="gap"></div>
 
-		<div class="title s-blue dots">
+		<div class="title s-blue ">
 			<div class="row" style="right: 30px;">
 				<div>
 					<p>
-					<img src="decathlon.jpg" style="width:350px;height:190px;float: left;;"/>
-					<h1 style="font-style: normal;font-family: Georgia, 'Times New Roman', Times, serif; margin-top:100px ;font-size:50px;right: 40px;color: #000;">DECATHLON</h1>
-					<p style="font-family:Georgia, 'Times New Roman', Times, serif;margin-top:50px;color: rgb(204, 197, 197);font-size:22;margin-top: 100;">Team AAROHAN presents to you the coding module - DECATHLON!<br>
-						The smart coders out there, whose brains crave for some bugging and debugging, and the will gets smoothened along the long lines of codes, AAROHAN 2019 has provided you a platform to excel and prove your worth.</p>
+						<img class="event-image event-image4" src="decathlon.jpg"  />
+						<h1 class="event-title"
+							>
+							DECATHLON</h1>
+						<p class="about-event about-event4"
+							>
+							Team AAROHAN presents to you the coding module - DECATHLON!<br>
+							The smart coders out there, whose brains crave for some bugging and debugging, and the
+							will gets smoothened along the long lines of codes, AAROHAN 2019 has provided you a
+							platform to excel and prove your worth.</p>
 					</p>
-					</div>
+				</div>
 					</div>
 		</div>
 
