--- a/index.html
+++ b/index.html
@@ -9,6 +9,55 @@
 	<script src="https://cpliegpgassrzj4rzrgezjn2bowpicgn.cdn-freehost.com.ua/libs/bodyScrollLock.js"></script>
 
 	<title>Fest</title>
+
+	<style>
+		body,
+		html {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			margin: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background: #333735;
+		}
+
+		#aarohan_2020_logo {
+			width: 70vw;
+			height: 70vh;
+			position: relative;
+			overflow: visible;
+		}
+	</style>
+
+	<!-- Include lazylinepainter -->
+	<script src="lazy-line-painter-1.9.6.min.js"></script>
+
+	<script type="text/javascript">
+
+		(function () {
+
+			document.onreadystatechange = () => {
+
+				if (document.readyState === 'complete') {
+
+					/**
+					 * Setup your Lazy Line element.
+					 * see README file for more settings
+					 */
+
+					let el = document.querySelector('#aarohan_2020_logo');
+					let myAnimation = new LazyLinePainter(el, { "ease": "easeInSine", "strokeWidth": 2, "strokeOpacity": 1, "strokeColor": "white", "strokeCap": "square" });
+					myAnimation.paint();
+				}
+			}
+
+		})();
+
+	</script>
 </head>
 
 <body>
@@ -16,102 +65,140 @@
 	<main>
 		<div class="wrapper">
 
-		<div class="gapstart"></div>
+			<div class="gapstart aarohanLogo">
+				<svg id="aarohan_2020_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 542.11 553.68" data-llp-composed="true" class="lazy-line-painter">
+					<defs>
+						<style>
+							.cls-1 {
+								fill: #eee;
+							}
 
-		<div class="sq s-red-black">
-		
-			<div class="row" >
-				<div>
-					<p>
-						<img class="event-image event-image1" src="khulamaidan.jpg"  />
-						<br>
-						<h1 class="event-title"
-							>
-							KHULA MAIDAN</h1>
-						<p class="about-event about-event1"
-							>
-							Khula Maidaan is an event based on technical and creative skills. The participants will
-							have to design products based on the topics given and come up with plans to
-							commercialize their products in the real world market. They may or may not use technical
-							tools in doing so.</p>
-					</p>
+							.cls-2 {
+								fill: none;
+								stroke: #eee;
+								stroke-miterlimit: 10;
+								stroke-width: 4px;
+							}
+						</style>
+					</defs>
+					<title>aarohan_2020_logo</title>
+					<path class="cls-1"
+						d="M381.56,250.79c-.58-1.84.89-3,1.59-4.34,5.47-10.63,10.46-21.43,13.19-33.15a43.45,43.45,0,0,0,1.38-12.69c-.54-8.66-6.2-13.34-14.82-12.34a37.33,37.33,0,0,0-16,5.89,78.88,78.88,0,0,0-15.65,13.58,241.29,241.29,0,0,0-27.23,37c-7.09,11.56-13.64,23.42-20.05,35.36a22.33,22.33,0,0,0-2.47,6.12c-.74,3.59.29,5.92,3.5,7.72a11.91,11.91,0,0,0,1.19.58c5.4,2.35,8,1.35,9.63-4.33a208.4,208.4,0,0,1,12.56-33.44,165.89,165.89,0,0,1,35.24-49.36c4.35-4.15,9.23-7.31,15.27-8.37,5.29-.93,8.3,1.29,8.62,6.65a32.29,32.29,0,0,1-2.7,13.77,98.45,98.45,0,0,1-15,26.41c-.65.79-1.31,1.59-1.93,2.42-4.83,6.53-5.15,13.41-.95,20.25,1.43,2.33,2.86,2.66,5.05.93a25.5,25.5,0,0,0,3.08-3.15A71.41,71.41,0,0,1,392.9,252a33.11,33.11,0,0,1,12-4.3,15.5,15.5,0,0,1,17.45,14.24,6.05,6.05,0,0,1-2.08,5.12c-2.21,2-4.42,3.9-6.73,5.74C383,297,353.37,322.13,325.18,349c-11.85,11.3-23.3,23-33.41,35.9-2.81,3.59-5.43,7.35-8,11.14a55.2,55.2,0,0,0-5.89,11.9c-25.9-34.73-37.47-101.36-2.48-157.67,39.7-63.9,112.51-80.92,165.54-64.77.09,1.41-1,2.34-1.56,3.47-5.45,10.88-5.48,21.79-.18,32.73.19.4.4.79.62,1.17,3.66,6.43,9.26,6.71,13.56.62a24.52,24.52,0,0,0,4.44-11.87,46.91,46.91,0,0,0-1.6-18.81c-.21-.67-.3-1.38-.48-2.19,1.62-.13,2.72.6,3.88,1.1a147.48,147.48,0,0,1,59.61,46.53c.79,1,1.8,2,2,3.4-1,.88-2,1.74-2.92,2.65a71.42,71.42,0,0,1-22.43,14.62,45.31,45.31,0,0,1-20.66,3.7c-9.3-.68-14.64-4.75-17.53-13.53-.43-1.29-.6-2.72-1.79-3.74-4.8,6.59-2,15.61,2.95,19.76a22.93,22.93,0,0,0,19.4,5.14,67.1,67.1,0,0,0,31.57-14.9,78.81,78.81,0,0,0,10.83-11c.63-.78,1.15-1.81,2.46-1.17,6.17,9.7,11.83,19.65,16.07,30.39a148.08,148.08,0,0,1-44.7,169.26c-.79.64-1.65,1.21-2.89,2.12-.47-1.19-.92-2.18-1.27-3.21-11.88-34.84-22.45-70.06-30-106.13-4.34-20.61-8.1-41.32-9.57-62.38a175.69,175.69,0,0,1-.21-21.65,27.43,27.43,0,0,0,0-5.73c-.54-3.4-3-4.33-5.77-2.33a10.68,10.68,0,0,0-3.68,5.39c-1.45,4.08-5.25,5.76-8.35,8.12a1.59,1.59,0,0,1-2.51-.91c-.42-1.09-.73-2.23-1.07-3.35-3.58-11.73-11.72-16.48-23.76-13.91a51.5,51.5,0,0,0-20.92,10c-.89.69-1.57,1.82-2.92,1.79Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-0" data-llp-duration="500"
+						data-llp-delay="0" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+					<path class="cls-1"
+						d="M442.41,306.76q.38-4,.79-8l1.51.11a1008.34,1008.34,0,0,0,33.86,149.22c.17.56.32,1.13.49,1.69,1,3.31,1,3.34-2,5.15a144.17,144.17,0,0,1-60.29,19.91q-53.48,5.22-98.19-24.57a23.94,23.94,0,0,1-5.14-4c.83-.75,1.88-.59,2.75-.77a74.43,74.43,0,0,0,26.66-11.31c20.91-13.92,39.16-30.69,53.8-51.21,15-21.06,24.52-44.46,29.78-69.72,2.9-13.91,4-28,4.37-42.12.17-6.11,2.94-10.49,8.65-14.43-2.84,12.16-3.72,24.65-4.52,37.08q-1.25,19.23-1.46,38.52c-.08,7.28-.18,14.55-.18,21.83q0,7.29.06,14.58c.12,13.08.3,26.17,1,39.23.18,3.42,0,6.89-.08,10.32,0,.62.35,1.51.93,1.26.31-.14.38-.55.39-.9,1.3-25.53,2.43-51.06,4.11-76.57C440.43,330.34,441.31,318.52,442.41,306.76Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-1" data-llp-duration="500"
+						data-llp-delay="500" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+					<path class="cls-1"
+						d="M423,280.47c-1.4,20.43-3.92,41-13.55,59.91-12.27,24.08-28.54,44.93-50.42,61.1a95.84,95.84,0,0,1-29.82,15,39.07,39.07,0,0,1-8.23,1.55,22,22,0,0,1-21.37-12.82c-1.8-4.16-.92-8.16.88-11.93a97.75,97.75,0,0,1,5.9-10.34c9.26-14.48,20.78-27.09,32.73-39.31,19.7-20.15,41.27-38.22,62.95-56.15q8.16-6.75,16.36-13.48a24.94,24.94,0,0,1,2.07-1.65c1.73-1.14,2.43-.85,2.51,1.13C423.07,275.67,423,277.88,423,280.47Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-2" data-llp-duration="500"
+						data-llp-delay="1000" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+					<path class="cls-1" d="M340.82,251.82l-.77,1.42c-.15-.41-.5-.88-.4-1.22.21-.68.77-.63,1.34,0Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-3" data-llp-duration="500"
+						data-llp-delay="1500" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+					<circle class="cls-2" cx="272.54" cy="203.49" r="201.49" data-llp-id="aarohan_2020_logo-4"
+						data-llp-duration="500" data-llp-delay="2000" fill-opacity="0" style=""
+						data-llp-stroke-join="miter-clip" />
+					<path class="cls-2"
+						d="M402.6,673.19c-33.38-90.77,11.56-140.59,89.08-164.42,23.21-7.09,43.53-6.66,58-16.47,22.73-15.41,53.82-51.89,71.38-56.5,25.31-6.72,16.11,14.36,16.11,14.36s-32.66,46.56-37,51.31-23.94,20.39-29.7,21.68c5.79.57,20.49-8.69,33.67-19.49,4-3.21,7-8.72,10.72-13.87,16-22.58,28.12-33.57,29.88-45.57S635.55,430,635.55,430s1-14.36,3.88-52.46c1.73-24,17-34.76,24.1-30.36,3.16,1.95.73,21.17.69,27.46-.25,27.18,9.59,66.41,1.87,84.59-10,23.11-30.73,78.4-61.41,101.49-85.3,63.95-146.29,14.86-202.08,112.46Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-5" data-llp-duration="500"
+						data-llp-delay="2500" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+					<path class="cls-2"
+						d="M402.23,672.75c31.47-91.44-14.48-140.31-92.47-162.53C286.4,503.6,266,504.48,251.37,495c-23-14.94-54.88-50.77-72.53-55-25.44-6.19-15.8,14.7-15.8,14.7s33.6,45.87,38.07,50.53,24.35,19.89,30.08,21.07c-5.73.68-20.67-8.26-34-18.8-4-3.13-7.23-8.55-11-13.64-16.51-22.25-28.81-33-30.82-44.95s8.87-14.37,8.87-14.37-1.28-14.36-4.91-52.39c-2.23-24-17.76-34.4-24.72-29.86-3.12,2-.3,21.18-.14,27.48.83,27.16-8.21,66.6-.1,84.61,10.38,22.91,32.28,77.76,63.5,100.18,86.61,62.18,146.57,11.83,204.38,108.25Z"
+						transform="translate(-128.95 -124.24)" data-llp-id="aarohan_2020_logo-6" data-llp-duration="500"
+						data-llp-delay="3000" fill-opacity="0" style="" data-llp-stroke-join="miter-clip" />
+				</svg>
+			</div>
+
+			<div class="sq s-red-black">
+
+				<div class="row">
+					<div>
+						<p>
+							<img class="event-image event-image1" src="khulamaidan.jpg" />
+							<br>
+							<h1 class="event-title">
+								KHULA MAIDAN</h1>
+							<p class="about-event about-event1">
+								Khula Maidaan is an event based on technical and creative skills. The participants will
+								have to design products based on the topics given and come up with plans to
+								commercialize their products in the real world market. They may or may not use technical
+								tools in doing so.</p>
+						</p>
+					</div>
+				</div>
+
+
+
+			</div>
+
+			<div class="gap"></div>
+
+			<div class="title s-blue ">
+				<div class="row">
+					<div>
+						<p>
+							<img class="event-image event-image2" src="inquest.jpg" />
+							<h1 class="event-title">
+								INQUEST</h1>
+							<p class="about-event about-event2">
+								Inquest is one of the most exciting and brainstorming event of Aarohan.The online quiz
+								revolves around a series of twisted questions and puzzles.With a high participation
+								number Inquest stands as the most exciting and fun virtual event of Aarohan..</p>
+						</p>
+					</div>
 				</div>
 			</div>
-			
-			
-			
-		</div>
 
-		<div class="gap"></div>
-
-		<div class="title s-blue ">
-			<div class="row">
-				<div>
-					<p>
-						<img class="event-image event-image2" src="inquest.jpg"  />
-						<h1 class="event-title"
-							>
-							INQUEST</h1>
-						<p class="about-event about-event2"
-							>
-							Inquest is one of the most exciting and brainstorming event of Aarohan.The online quiz
-							revolves around a series of twisted questions and puzzles.With a high participation
-							number Inquest stands as the most exciting and fun virtual event of Aarohan..</p>
-					</p>
-				</div>
-				</div>
-		</div>
-
-		<div class="gap"></div>
-		<div class="sq s-red-black">
-			<div class="row" style="right: 30px;">
-				<div>
-					<p>
-						<img class="event-image event-image3" src="bob.jpg" />
-						<h1 class="event-title"
-							>
-							TRIVIO</h1>
-						<p class="about-event about-event3"
-							>
-							Trivio is a new age game. The trivio is a fun and challenging online quiz where the
-							participants are restricted to a given amount of time for solving questions. Each
-							question has four options and one correct answer, on giving the correct answer within
-							the limited time a more challenging question comes up. Wrong answer or no answer leads
-							to elimination of the participant.</p>
-					</p>
-				</div>
+			<div class="gap"></div>
+			<div class="sq s-red-black">
+				<div class="row" style="right: 30px;">
+					<div>
+						<p>
+							<img class="event-image event-image3" src="bob.jpg" />
+							<h1 class="event-title">
+								TRIVIO</h1>
+							<p class="about-event about-event3">
+								Trivio is a new age game. The trivio is a fun and challenging online quiz where the
+								participants are restricted to a given amount of time for solving questions. Each
+								question has four options and one correct answer, on giving the correct answer within
+								the limited time a more challenging question comes up. Wrong answer or no answer leads
+								to elimination of the participant.</p>
+						</p>
 					</div>
-		</div>
-
-		<div class="gap"></div>
-
-		<div class="title s-blue ">
-			<div class="row" style="right: 30px;">
-				<div>
-					<p>
-						<img class="event-image event-image4" src="decathlon.jpg"  />
-						<h1 class="event-title"
-							>
-							DECATHLON</h1>
-						<p class="about-event about-event4"
-							>
-							Team AAROHAN presents to you the coding module - DECATHLON!<br>
-							The smart coders out there, whose brains crave for some bugging and debugging, and the
-							will gets smoothened along the long lines of codes, AAROHAN 2019 has provided you a
-							platform to excel and prove your worth.</p>
-					</p>
 				</div>
+			</div>
+
+			<div class="gap"></div>
+
+			<div class="title s-blue ">
+				<div class="row" style="right: 30px;">
+					<div>
+						<p>
+							<img class="event-image event-image4" src="decathlon.jpg" />
+							<h1 class="event-title">
+								DECATHLON</h1>
+							<p class="about-event about-event4">
+								Team AAROHAN presents to you the coding module - DECATHLON!<br>
+								The smart coders out there, whose brains crave for some bugging and debugging, and the
+								will gets smoothened along the long lines of codes, AAROHAN 2019 has provided you a
+								platform to excel and prove your worth.</p>
+						</p>
 					</div>
-		</div>
+				</div>
+			</div>
 
-		<div class="gap"></div>
+			<div class="gap"></div>
 
-		
+
 	</main>
 
-	
+
 
 	<script src="Untitled-1.js"></script>
-	
+
 </body>
+
 </html>
